Lesson 3 is done.

--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -32,9 +32,10 @@
     <string-array name="temprUnitsArray">
         <item>C</item>
         <item>F</item>
+
     </string-array>
 
-    <!-- Example settings for Data & Sync -->
+   <!-- &lt;!&ndash; Example settings for Data & Sync &ndash;&gt;
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
@@ -57,7 +58,7 @@
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
 
-    <!-- Example settings for Notifications -->
+    &lt;!&ndash; Example settings for Notifications &ndash;&gt;
     <string name="pref_header_notifications">Notifications</string>
 
     <string name="pref_title_new_message_notifications">New message notifications</string>
@@ -65,5 +66,5 @@
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
 
-    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="pref_title_vibrate">Vibrate</string>-->
 </resources>
